fix: align contact me section with previous sections on the left and right sides

--- a/styles.css
+++ b/styles.css
@@ -176,7 +176,7 @@ body {
       grid-row: 1;
       grid-column: 2;
       display: flex;
-      flex-wrap: wrap;
+      justify-content: space-between;
       gap: 20px;
       margin: 50px 0px;
 
